wip dir scanner done

--- a/processor-gradle6/app/build.gradle
+++ b/processor-gradle6/app/build.gradle
@@ -12,6 +12,10 @@ hipoom {
         needTrackSuperClassForInterface = false
         annotations = ["com.hipoom.processor.TestAnnotation"]
     }
+
+    timing {
+        enable = true
+    }
 }
 
 android {
