--- a/processor-gradle6/processor/build.gradle
+++ b/processor-gradle6/processor/build.gradle
@@ -23,4 +23,7 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Files
+    implementation 'com.hipoom:files:0.0.3'
 }
