--- a/processor-gradle6/app/build.gradle
+++ b/processor-gradle6/app/build.gradle
@@ -16,12 +16,11 @@ hipoom {
     timing {
         enable = true
 
-//        blacklist {
-//            // 官方库中的类，不参与插桩，提高效率
-//            prefix = ["kotlin.", "kotlinx.", "com.android.", "androidx."]
-//            // 类似于 .R$id、.R$layout 这些类，不参与插桩
-//            contains = [".R\$"]
-//        }
+        // 黑名单 - 官方库中的类，不参与插桩，提高效率
+        blacklist.prefix = ["kotlin.", "kotlinx.", "com.android.", "androidx."]
+
+        // 黑名单 - 类似于 .R$id、.R$layout 这些类，不参与插桩
+        blacklist.contains = [".R\$"]
     }
 }
 
@@ -75,4 +74,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation "com.hipoom:registry:0.0.3"
+    implementation "com.hipoom:files:0.0.3"
 }
